Sutter Health/src/objects/PDIAddressDoctorService__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Address Doctor Service Details</description>
    <fields>
        <fullName>Batch_Process_Mode__c</fullName>
        <label>Batch Process Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Address Doctor Endpoint Url</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessMode__c</fullName>
        <label>ProcessMode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestMethod__c</fullName>
        <label>RequestMethod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soapAction__c</fullName>
        <label>soapAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PDI Address Doctor Service</label>
</CustomObject>